# cargo-gpu

./: .gitignore  Cargo.toml  LICENSE  README.md  clippy.toml  justfile
.github/workflows/: push.yaml
crates/cargo-gpu/: Cargo.toml
crates/cargo-gpu-wire-types/: Cargo.toml
crates/cargo-gpu-wire-types/src/: lib.rs
crates/cargo-gpu/src/: build.rs  builder.rs  config.rs  install.rs  lib.rs  main.rs  metadata.rs  show.rs  spirv.rs  spirv_cli.rs  spirv_source.rs  toml.rs
crates/shader-crate-template/: Cargo.toml
crates/shader-crate-template/src/: lib.rs
crates/spirv-builder-cli/: Cargo.toml  README.md  rust-toolchain.toml
crates/spirv-builder-cli/src/: args.rs  lib.rs  main.rs
crates/xtask/: Cargo.toml
crates/xtask/src/: main.rs
scripts/: build_shader_template.sh
src/: build.rs  lib.rs  linkage.rs  main.rs
