[workspace]
members = [
    "crates/cargo-gpu", 
    "crates/shader-crate-template"
]

exclude = [
    "crates/spirv-builder-cli"
]

resolver = "2"

[workspace.dependencies]
clap = { version = "4.4.8", features = ["derive"] }
chrono = { version = "0.4.38", default-features = false }
directories = "5.0.1"
env_home = "0.1.0"
env_logger = "0.10"
log = "0.4"
relative-path = "1.9.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
toml = "0.8.19"
