[workspace]
members = [
    "crates/cargo-gpu",
]

exclude = [
    "crates/spirv-builder-cli",

    # This currently needs to be excluded because it depends on a version of `rust-gpu` that
    # uses a toolchain whose Cargo version doesn't recognise version 4 of `Cargo.lock`.
    "crates/shader-crate-template"
]

resolver = "2"

[workspace.dependencies]
clap = { version = "4.4.8", features = ["derive"] }
chrono = { version = "0.4.38", default-features = false }
directories = "5.0.1"
env_home = "0.1.0"
env_logger = "0.10"
http = "1.2.0"
log = "0.4"
relative-path = "1.9.3"
serde = { version = "1.0.214", features = ["derive"] }
serde_json = "1.0.132"
snafu = "0.8.5"
toml = "0.8.19"
test-log = "0.2.16"

[workspace.lints.rust]
missing_docs = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = 0 }
pedantic = { level = "warn", priority = 0 }
nursery = { level = "warn", priority = 0 }
cargo = { level = "warn", priority = 0 }
restriction = { level = "warn", priority = 0 }
blanket_clippy_restriction_lints = { level = "allow", priority = 1 }

arithmetic_side_effects = { level = "allow", priority = 1 }
absolute_paths = { level = "allow", priority = 1 }
cargo_common_metadata = { level = "allow", priority = 1 }
implicit_return = { level = "allow", priority = 1 }
single_call_fn = { level = "allow", priority = 1 }
question_mark_used = { level = "allow", priority = 1 }
multiple_crate_versions = { level = "allow", priority = 1 }
pub_with_shorthand = { level = "allow", priority = 1 }
partial_pub_fields = { level = "allow", priority = 1 }
pattern_type_mismatch = { level = "allow", priority = 1 }
print_stdout = { level = "allow", priority = 1 }
std_instead_of_alloc = { level = "allow", priority = 1 }

# TODO: Try to not depend on allowing these lints
unwrap_used = { level = "allow", priority = 1 }
get_unwrap = { level = "allow", priority = 1 }
expect_used = { level = "allow", priority = 1 }
panic = { level = "allow", priority = 1 }

