[package]
name = "cargo-gpu"
version = "0.1.0"
edition = "2021"
description = "Generates shader .spv files from rust-gpu shader crates"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
[lib]
name = "cargo_gpu"

[build-dependencies]
env_home.workspace = true
toml.workspace = true

[dependencies]
clap.workspace = true
directories.workspace = true
env_logger.workspace = true
log.workspace = true
serde.workspace = true
serde_json.workspace = true
tempdir = "0.3.7"
toml.workspace = true

# Enable incremental by default in release mode.
[profile.release]
incremental = true
# HACK(eddyb) this is the default but without explicitly specifying it, Cargo
# will treat the identical settings in `[profile.release.build-override]` below
# as different sets of `rustc` flags and will not reuse artifacts between them.
codegen-units = 256

# Compile build-dependencies in release mode with the same settings
# as regular dependencies (including the incremental enabled above).
[profile.release.build-override]
opt-level = 3
incremental = true
codegen-units = 256
