[package]
name = "rust-gpu-shader-crate-template"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["rlib", "cdylib"]

# Dependencies for CPU and GPU code
[dependencies]
# "v0.9" doesn't seem to compile on windows?
spirv-std = { git = "https://github.com/Rust-GPU/rust-gpu", rev = "82a0f69" }

# Dependencies for GPU code
[target.'cfg(target_arch = "spirv")'.dependencies]
glam = { version = "0.29", default-features = false, features = ["libm"] }


# Dependencies for CPU code
[target.'cfg(not(target_arch = "spirv"))'.dependencies]
glam = { version = "0.29", features = ["std"] }

