[package]
name = "spirv-builder-cli"
version = "0.1.0"
edition = "2021"

[lib]

[dependencies]
env_home = "0.1.0"
env_logger = "0.10"
log = "0.4"
serde = "1.0.214"
serde_json = "1.0.132"
toml = "0.8.19"

[dependencies.spirv-builder-pre-cli]
package = "spirv-builder"
optional = true
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "4c633aec"

[dependencies.spirv-builder-0_10]
package = "spirv-builder"
optional = true
git = "https://github.com/Rust-GPU/rust-gpu"
rev = "60dcb82"

[features]
default = ["spirv-builder-0_10"]
# The `spirv-builder` before `cargo gpu` existed. It has an incompatible `SpirvBuilder` interface.
spirv-builder-pre-cli = ["dep:spirv-builder-pre-cli"]
# The first version that introduced `cargo gpu`. It has some extra `.builder()` args that make
# dynamically changing build dependencies easier.
spirv-builder-0_10 = ["dep:spirv-builder-0_10"]
